Thu Aug 27 20:27:52 UTC 2009  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/templates/gnu.mpd: When building requirement-
          checking and LDFLAGS for building binaries, take ARCH builds into
          account to properly locate libs.

        * include/makeinclude/wrapper_macros.GNU: Don't do the ARCH adjusting
          until after including platform_macros.GNU where ARCH would be
          defined.

        * include/makeinclude/rules.lib.GNU: Fix building, installing, and
          cleaning up libs built in an ARCH build.

Wed Aug 26 21:58:14 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:
        * include/makeinclude/wrapper_macros.GNU:

          Reverting for now until I can make some fixes. 
        
Tue Aug 25 04:11:22 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:
        * include/makeinclude/wrapper_macros.GNU:

          Enable mcpp by default.

Fri Aug 21 21:24:44 UTC 2009  Steve Huston  <shuston@riverace.com>

        * bin/PerlACE/ProcessLVRT.pm: Don't be so aggressive with the reboots.

        * bin/TestTarget_LVRT.pm: React correctly to only one name being
          passed to GetFile - if there's only one (usually the case w/ TAO
          tests) LocalFile-ify it for the remote and use as-is for local.
          This gets most of the TAO tests to properly retrieve the IOR file.

Tue Aug 18 19:09:40 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/config-macros.h: In ACE_NOTREACHED, aC++ 03.* needs to have the
          unreachable line removed as well.

Tue Aug 18 12:25:01 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Monitor_Control/Auto_Update_Starter.cpp:
        * ace/Monitor_Control/Bytes_Received_Monitor.h:
        * ace/Monitor_Control/Bytes_Received_Monitor.cpp:
        * ace/Monitor_Control/Bytes_Sent_Monitor.h: